# 2110101-com-prog

./: .gitattributes  .gitignore  .prettierignore  .pylintrc  README.md  homework.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy.yml
exam/: 2565_1_Quiz_1_1.py  2565_1_Quiz_1_2.py  2565_1_Quiz_1_3.py  2565_1_Quiz_2_1.py  2565_1_Quiz_2_2.py  2565_1_Quiz_2_3.py  2565_1_Quiz_3_1.py  2565_1_Quiz_3_2.py  2565_1_Quiz_3_3.py
grader/: 00_Intro_01.hs  00_Intro_01.py  00_Intro_02.py  01_Expr_01.py  01_Expr_04.py  01_Expr_06.py  01_Expr_07.py  01_Expr_08.py  01_Expr_F04.py  02_StrList_06.py  02_StrList_07.py  02_StrList_08.py  02_StrList_F06.py  03_If_06.py  03_If_07.py  03_If_F02.py  03_If_F08.py  04_Loop_02.py  04_Loop_03.py  04_Loop_05.py  04_Loop_10.py  04_Loop_11.py  04_Loop_20.py  04_Loop_F06.py  05_List_11.py  05_List_15.py  05_List_21.py  05_List_22.py  05_List_31.py  05_List_32.py  06_Func_21.py  06_Func_22.py  06_Func_23.py  06_Func_31.py  07_StrFile_13.py  07_StrFile_22.py  07_StrFile_32.py  07_StrFile_33.cpp  08_Dict_11.py  08_Dict_22.py  (+31 more)
web/: index.md
web/.vitepress/: chad.md  chad2.md  config.ts  generate.ts
web/introduction/: index.md
workshops/01-pygame/: 00-start_pygame.py  01-get_rect.py  02-Lab_bnk48_ball-student.py
workshops/02-html/: beautiful-soup.ipynb  web-scraping-2.ipynb  web-scraping.ipynb
workshops/03-matplotlib/: datavis.ipynb
workshops/04-recursion/: Recursion_workshop_student.ipynb
workshops/05-simulation/: Workshop3_part2_probability_student.ipynb
workshops/06-debugging/: anagram.py  coin.py  connected_component.py  sum.py
workshops/10-pygame2/: 03-sprite.py  (+1 more)
(+3 files in other folders)
