[tool.poetry]
name = "2110101-com-prog"
version = "0.0.0"
description = "This repository contains everything related to 2110101 COM PROG."
authors = ["Nutthapat Pongtanyavichai <59821765+Leomotors@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
